<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/about_app"
    android:orientation="vertical">

    <EditText
        android:id="@+id/content_note_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/view_padding"
        android:text="@string/head_note1"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_date"
        app:layout_constraintEnd_toStartOf="@id/edit_text_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content_note_head" />

    <Button
        android:id="@+id/btn_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_time"
        app:layout_constraintTop_toBottomOf="@id/content_note_head"
        app:layout_constraintStart_toEndOf="@id/edit_text_date"
        app:layout_constraintEnd_toStartOf="@id/edit_text_time"
        />

    <EditText
        android:id="@+id/edit_text_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:inputType="date"
        android:padding="@dimen/view_padding"
        android:text="@string/text_note"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toEndOf="@id/btn_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content_note_head" />

    <EditText
        android:id="@+id/edit_text_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:inputType="date"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:padding="@dimen/view_padding"
        android:text="@string/date_note"
        app:layout_constraintEnd_toStartOf="@id/btn_time"
        app:layout_constraintStart_toEndOf="@id/btn_date"

        app:layout_constraintTop_toBottomOf="@id/content_note_head" />

    <EditText
        android:id="@+id/note_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:padding="@dimen/view_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_date" />

</androidx.constraintlayout.widget.ConstraintLayout>